package lab12.ex1;

public enum SortingFilter {
    
    RAM,
    PRICE,
    DESCRIPTION
}
