package lab12.ex1;

public enum SortingOrder {
   
    ASCENDING,
    DESCENDING
}
